fix overflow in input div

--- a/src/components/GFileInput/_GFileInput.scss
+++ b/src/components/GFileInput/_GFileInput.scss
@@ -3,7 +3,13 @@
     opacity: 0;
     max-width: 100%;
     width: 100%;
+    height: 100%;
+    position: absolute;
   }
+  label {
+    top: 6px;
+  }
+
 }
 
 .g-file-input .g-file-input--text {
@@ -12,8 +18,7 @@
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  height: 100%;
-  position: absolute;
+
 
   &.g-file-input--text--chips {
     flex-wrap: wrap;
